--- a/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/cable/CableView.fxml
+++ b/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/cable/CableView.fxml
@@ -8,5 +8,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Line fx:id="root" endX="100.0" startX="-100.0" strokeWidth="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.cable.CablePresenter" />
+<Pane fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.cable.CablePresenter">
+   <children>
+      <Line fx:id="line" endX="100.0" stroke="#6b6b6b" strokeWidth="10.0" />
+      <Pane fx:id="directionOverlay" />
+   </children>
+</Pane>
