--- a/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
+++ b/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
@@ -2,11 +2,10 @@
 
 <?import nl.utwente.cs.caes.tactile.control.*?>
 <?import java.lang.*?>
-<?import java.net.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 
-<TactilePane fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.TouchPresenter" />
+<fx:root prefHeight="1080.0" prefWidth="1920.0" type="TactilePane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
