--- a/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/cable/CableView.fxml
+++ b/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/cable/CableView.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.cable.CablePresenter">
+<fx:root fx:id="root" type="Pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Line fx:id="line" endX="100.0" stroke="#6b6b6b" strokeWidth="10.0" />
    </children>
-</Pane>
+</fx:root>
