--- a/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
+++ b/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
@@ -7,17 +7,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.house.*?>
+<?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.node.*?>
 
-<fx:root type="TactilePane" 
+<fx:root type="TactilePane" fx:id="root"
          xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     
     <children>
-        <HouseView layoutX="0" layoutY="0" TactilePane.draggable="false" />
-        <HouseView layoutX="760" layoutY="0" TactilePane.draggable="false" />
-        <HouseView layoutX="1520" layoutY="0" TactilePane.draggable="false" />
-        <HouseView layoutX="1520" layoutY="880" TactilePane.draggable="false" />
-        <HouseView layoutX="760" layoutY="880" TactilePane.draggable="false" />
-        <HouseView layoutX="0" layoutY="880" TactilePane.draggable="false" />
-        
     </children>
 </fx:root>
