--- a/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
+++ b/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
@@ -8,10 +8,12 @@
 <?import javafx.scene.layout.*?>
 <?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.house.*?>
 <?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.node.*?>
+<?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.network.*?>
 
 <fx:root type="TactilePane" fx:id="root"
          xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     
     <children>
+        <NetworkView TactilePane.draggable="false"  />
     </children>
 </fx:root>
