--- a/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/node/NodeView.fxml
+++ b/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/node/NodeView.fxml
@@ -8,4 +8,4 @@
 <?import javafx.scene.layout.*?>
 
 
-<fx:root fx:id="root" height="30.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" type="Rectangle" width="30.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
+<fx:root fx:id="root" height="30.0" fill="#6b6b6b" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" type="Rectangle" width="30.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
