--- a/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
+++ b/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
@@ -9,6 +9,7 @@
 <?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.house.*?>
 <?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.node.*?>
 <?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.network.*?>
+<?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.device.*?>
 
 <fx:root type="TactilePane" fx:id="root"
          xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
