Verder met devices
Device kan gedropt worden op huis, als het niet in huis staat dan wordt
het verwijderd

--- a/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
+++ b/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/TouchView.fxml
@@ -15,6 +15,6 @@
          xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     
     <children>
-        <NetworkView TactilePane.draggable="false"  />
+        <NetworkView fx:id="networkView" TactilePane.draggable="false"  />
     </children>
 </fx:root>
