CableView laat nu richting zien

--- a/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/cable/CableView.fxml
+++ b/TactileTriana/src/nl/caes/ewi/utwente/nl/tactiletriana/gui/touch/cable/CableView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.cable.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.shape.*?>
 <?import java.lang.*?>
@@ -11,5 +12,7 @@
 <fx:root fx:id="root" type="Group" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Line fx:id="line" endX="100.0" stroke="#6b6b6b" strokeWidth="10.0" />
+      <DirectionView fx:id="directionStart" rotate="270.0" />
+      <DirectionView fx:id="directionEnd" rotate="90.0" />
    </children>
 </fx:root>
