bugfix na veranderen packages
Refactoren van packages gaat niet goed met FXML files, heb dat nu
gefixt.

--- a/TactileTriana/src/nl/utwente/ewi/caes/tactiletriana/gui/touch/cable/CableView.fxml
+++ b/TactileTriana/src/nl/utwente/ewi/caes/tactiletriana/gui/touch/cable/CableView.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import nl.caes.ewi.utwente.nl.tactiletriana.gui.touch.cable.*?>
+<?import nl.utwente.ewi.caes.tactiletriana.gui.touch.cable.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.shape.*?>
 <?import java.lang.*?>
