--- a/tactiletriana/src/main/resources/fxml/DeviceView.fxml
+++ b/tactiletriana/src/main/resources/fxml/DeviceView.fxml
@@ -8,14 +8,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="50.0" minWidth="50.0" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="50.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="5.0" width="50.0" />
-      <Label fx:id="content" text="A">
-         <font>
-            <Font size="31.0" />
-         </font>
-      </Label>
-      <Circle fx:id="configIcon" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" translateX="10.0" translateY="-10.0" StackPane.alignment="TOP_RIGHT" />
+      <Circle fx:id="configIcon" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" translateX="15.0" translateY="-15.0" StackPane.alignment="TOP_RIGHT" />
    </children>
 </fx:root>
