--- a/tactiletriana/src/main/resources/fxml/NodeView.fxml
+++ b/tactiletriana/src/main/resources/fxml/NodeView.fxml
@@ -8,4 +8,8 @@
 <?import javafx.scene.layout.*?>
 
 
-<fx:root fx:id="root" height="30.0" fill="#6b6b6b" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" type="Rectangle" width="30.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
+<fx:root type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Rectangle fx:id="rectangle" fill="#6b6b6b" height="30.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="30.0" />
+   </children>
+</fx:root>
