--- a/tactiletriana/src/main/resources/fxml/DetailView.fxml
+++ b/tactiletriana/src/main/resources/fxml/DetailView.fxml
@@ -5,23 +5,40 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.geometry.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.detail.datetime.*?>
+<?import nl.utwente.ewi.caes.tactiletriana.gui.detail.chart.*?>
 
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080" prefWidth="1920" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints />
-        <RowConstraints />
+        <RowConstraints valignment="CENTER"/>
+        <RowConstraints valignment="CENTER"/>
     </rowConstraints>
   
-    <BorderPane >
-        <center>
-            <DateTimeView fx:id="dateTimeView"/>
-        </center>
+    <StackPane >
         
-    </BorderPane>
+        <!-- placeholder voor logo -->
+        <Rectangle width="150" height="150" StackPane.alignment="CENTER_LEFT">
+            <StackPane.margin>
+                <Insets bottom="5" left="5" top="5" />   
+            </StackPane.margin>
+        </Rectangle>
+        
+        <DateTimeView fx:id="dateTimeView" StackPane.alignment="CENTER" />
+        
+        <!-- placeholder voor weer -->
+        <Rectangle width="150" height="150" StackPane.alignment="CENTER_RIGHT">
+            <StackPane.margin>
+                <Insets bottom="5" right="5" top="5" />   
+            </StackPane.margin>
+        </Rectangle>
+    </StackPane>
+    
+    <ChartView GridPane.rowIndex="1" GridPane.hgrow="ALWAYS" />
     
 </fx:root>
