Poging tot chart, WIP

--- a/tactiletriana/src/main/resources/fxml/ChartView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ChartView.fxml
@@ -7,15 +7,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<fx:root type="Group" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root stylesheets="@../stylesheets/chartview.css" type="Group" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AreaChart fx:id="chart" title="Chart Title">
+      <AreaChart fx:id="chart" prefHeight="600.0" prefWidth="1800.0" title="Chart Title">
         <xAxis>
-          <CategoryAxis side="BOTTOM" fx:id="xAxis" />
+          <CategoryAxis autoRanging="true" side="BOTTOM" fx:id="xAxis" />
         </xAxis>
         <yAxis>
-          <NumberAxis fx:id="yAxis" side="LEFT" />
+          <NumberAxis fx:id="yAxis" autoRanging="false" forceZeroInRange="false" minorTickCount="0" minorTickLength="0.0" minorTickVisible="false" side="LEFT" />
         </yAxis>
       </AreaChart>
    </children>
