--- a/tactiletriana/src/main/resources/fxml/WeatherView.fxml
+++ b/tactiletriana/src/main/resources/fxml/WeatherView.fxml
@@ -10,7 +10,7 @@
 <fx:root stylesheets="@../stylesheets/weatherview.css" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" />
-      <ColumnConstraints hgrow="NEVER" />
+      <ColumnConstraints halignment="RIGHT" hgrow="NEVER" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
