--- a/tactiletriana/src/main/resources/fxml/ScreenIndexView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ScreenIndexView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<fx:root alignment="CENTER" prefHeight="150.0" prefWidth="150.0" text="1" textAlignment="CENTER" type="Label" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="CENTER" contentDisplay="TEXT_ONLY" prefHeight="150.0" prefWidth="150.0" text="1" textAlignment="CENTER" type="Label" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <font>
       <Font name="System Bold" size="96.0" />
    </font>
