--- a/tactiletriana/src/main/resources/fxml/DetailView.fxml
+++ b/tactiletriana/src/main/resources/fxml/DetailView.fxml
@@ -7,33 +7,30 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.geometry.*?>
+<?import javafx.scene.image.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.detail.datetime.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.detail.chart.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.detail.weather.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080" prefWidth="1920" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <columnConstraints>
-        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="100" />
-        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="100" />
-        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" percentWidth="100" />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints valignment="CENTER" />
-      <RowConstraints maxHeight="0.0" minHeight="0.0" percentHeight="100.0" prefHeight="0.0" valignment="CENTER" />
-    </rowConstraints>
-  
-    <!-- placeholder voor logo -->
-    <Rectangle height="150" width="150" GridPane.columnIndex="0">
-        <StackPane.margin>
-            <Insets bottom="5" left="5" top="5" />   
-        </StackPane.margin>
-    </Rectangle>
+<fx:root prefHeight="1080"  prefWidth="1920" type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 
-    <DateTimeView fx:id="dateTimeView" GridPane.columnIndex="1"  />
+    <!-- HEADER -->
+    <top>
+        <StackPane>
+            <ImageView fx:id ="trianaLogo" fitHeight="200" fitWidth="200" preserveRatio="true" StackPane.alignment="CENTER_LEFT"  >
+                <image>
+                    <Image url="images/triana.png"/>
+                </image>
+            </ImageView>
 
-    <WeatherView fx:id="weatherView" GridPane.columnIndex="2"  />
-        
+            <DateTimeView fx:id="dateTimeView" StackPane.alignment="CENTER"  />
+
+            <WeatherView fx:id="weatherView" StackPane.alignment="CENTER_RIGHT"   />
+        </StackPane>
+    </top>
     
-    <ChartView fx:id="chartView" GridPane.columnSpan="3"   GridPane.rowIndex="1" />
-    
+    <!-- MAIN CONTENT -->
+    <center>
+        <ChartView fx:id="chartView"  />
+    </center>
 </fx:root>
