--- a/tactiletriana/src/main/resources/fxml/ChartView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ChartView.fxml
@@ -11,7 +11,7 @@
    <children>
       <LineChart fx:id="chart" animated="false" createSymbols="false" legendVisible="false" prefHeight="600.0" prefWidth="1800.0" title="Chart Title">
         <xAxis>
-          <NumberAxis autoRanging="false" label="Time (minutes)" minorTickCount="0" minorTickVisible="false" side="BOTTOM" tickMarkVisible="false" tickUnit="60.0" fx:id="xAxis" />
+          <NumberAxis autoRanging="false" label="Time" minorTickCount="0" minorTickVisible="false" side="BOTTOM" tickMarkVisible="false" tickUnit="60.0" fx:id="xAxis" />
         </xAxis>
         <yAxis>
           <NumberAxis fx:id="yAxis" forceZeroInRange="false" minorTickCount="0" minorTickVisible="false" side="LEFT" tickMarkVisible="false" />
