Stacks werken op kleine issues na
Roteren doet nog wel een beetje raar. Fix ik pas als ik ook het schalen
van resoluties gefixt heb

--- a/tactiletriana/src/main/resources/fxml/DeviceView.fxml
+++ b/tactiletriana/src/main/resources/fxml/DeviceView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="50.0" minWidth="50.0" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="50.0" prefWidth="50.0" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Circle fx:id="configIcon" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" translateX="15.0" translateY="-15.0" StackPane.alignment="TOP_RIGHT" />
    </children>
