Touchscreen is schaalbaar (vanaf 1600x900), huizen groter

--- a/tactiletriana/src/main/resources/fxml/TouchView.fxml
+++ b/tactiletriana/src/main/resources/fxml/TouchView.fxml
@@ -8,13 +8,11 @@
 <?import javafx.scene.layout.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.house.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.node.*?>
-<?import nl.utwente.ewi.caes.tactiletriana.gui.touch.network.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.device.*?>
 
 <fx:root type="TactilePane" fx:id="root" bordersCollide="true" proximityThreshold="0"
+         minWidth="1600" minHeight="900" 
          xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     
-    <children>
-        <NetworkView fx:id="networkView" TactilePane.draggable="false" />
-    </children>
+    
 </fx:root>
