--- a/tactiletriana/src/main/resources/fxml/HouseView.fxml
+++ b/tactiletriana/src/main/resources/fxml/HouseView.fxml
@@ -7,8 +7,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" type="Pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root type="Pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="#cdcdcd" height="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="5.0" width="400.0" />
+      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="#cdcdcd" height="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="5.0" width="450.0" />
    </children>
 </fx:root>
