--- a/tactiletriana/src/main/resources/fxml/DetailView.fxml
+++ b/tactiletriana/src/main/resources/fxml/DetailView.fxml
@@ -12,7 +12,7 @@
 <?import nl.utwente.ewi.caes.tactiletriana.gui.detail.chart.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.detail.weather.*?>
 
-<fx:root prefHeight="1080"  prefWidth="1920" type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minHeight="900"  minWidth="1600" type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- HEADER -->
     <top>
