--- a/tactiletriana/src/main/resources/fxml/ConfigurationView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ConfigurationView.fxml
@@ -9,40 +9,54 @@
 
 <fx:root type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="10.0" />
+      <ColumnConstraints hgrow="SOMETIMES" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints minHeight="10.0" percentHeight="25.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="15.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="15.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="15.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="15.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="NEVER" />
+      <RowConstraints valignment="TOP" vgrow="NEVER" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="ALWAYS" />
+      <RowConstraints vgrow="NEVER" />
    </rowConstraints>
    <children>
       <Label layoutX="14.0" layoutY="14.0" styleClass="title-label" stylesheets="@../stylesheets/launcherview.css" text="Configuration Panel" GridPane.columnSpan="2147483647" />
-      <Label text="Touch Screen" GridPane.rowIndex="2" />
-      <CheckBox fx:id="fullScreenCheckBox" mnemonicParsing="false" text="Full Screen" GridPane.rowIndex="1" />
-      <Label text="Detail Screen" GridPane.rowIndex="3" />
-      <Label text="API Port" GridPane.rowIndex="4" />
-      <HBox spacing="5.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+      <GridPane GridPane.rowIndex="1">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" percentHeight="25.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="25.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="25.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="25.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <CheckBox fx:id="fullScreenCheckBox" mnemonicParsing="false" text="Full Screen" />
+            <ComboBox fx:id="detailScreenComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS" />
+            <Label text="Detail Screen" GridPane.rowIndex="2" />
+            <Label text="API Port" GridPane.rowIndex="3" />
+            <TextField fx:id="portField" maxWidth="150.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
+            <ComboBox fx:id="touchScreenComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+            <Label text="Touch Screen" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+      <HBox spacing="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" GridPane.valignment="CENTER">
          <children>
             <Button fx:id="startButton" mnemonicParsing="false" text="Start Simulation" GridPane.rowIndex="5">
                <HBox.margin>
-                  <Insets top="5.0" />
+                  <Insets />
                </HBox.margin>
             </Button>
             <Button fx:id="resetButton" mnemonicParsing="false" text="Reset Simulation">
                <HBox.margin>
-                  <Insets top="5.0" />
+                  <Insets />
                </HBox.margin>
             </Button>
          </children>
       </HBox>
-      <ComboBox fx:id="touchScreenComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <ComboBox fx:id="detailScreenComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <TextField fx:id="portField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <StackPane fx:id="scenarioViewContainer" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
    </children>
    <opaqueInsets>
       <Insets />
