--- a/tactiletriana/src/main/resources/fxml/ScenarioView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ScenarioView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -12,15 +13,27 @@
   <rowConstraints>
     <RowConstraints vgrow="NEVER" />
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="BOTTOM" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" valignment="BOTTOM" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Label text="From" />
-      <HBox spacing="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+      <HBox alignment="CENTER" spacing="10.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2">
          <children>
-            <Button fx:id="addButton" mnemonicParsing="false" text="Add Timespan" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-            <Button fx:id="removeButton" mnemonicParsing="false" text="Remove Timespan" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button fx:id="addButton" mnemonicParsing="false" text="Add Timespan" GridPane.halignment="LEFT" GridPane.rowIndex="2">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin></Button>
+            <Button fx:id="removeButton" mnemonicParsing="false" text="Remove Timespan" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin></Button>
          </children>
+         <padding>
+            <Insets top="5.0" />
+         </padding>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
       </HBox>
       <Label text="To" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
       <ScrollPane hbarPolicy="NEVER" prefHeight="200.0" prefWidth="360.0" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="NEVER">
