Begonnen aan styleable maken met CSS
Zodat jullie noobs ook wat aan GUI kunnen klooien (y)

--- a/tactiletriana/src/main/resources/fxml/ChartView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ChartView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root stylesheets="@../stylesheets/chartview.css" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root styleClass="chart-view" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <LineChart fx:id="chart" animated="false" createSymbols="false" legendVisible="false" title="Chart Title">
         <xAxis>
