--- a/tactiletriana/src/main/resources/fxml/WeatherView.fxml
+++ b/tactiletriana/src/main/resources/fxml/WeatherView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root stylesheets="@../stylesheets/weatherview.css" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root styleClass="weather-view" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" />
       <ColumnConstraints halignment="RIGHT" hgrow="NEVER" />
