--- a/tactiletriana/src/main/resources/fxml/CableView.fxml
+++ b/tactiletriana/src/main/resources/fxml/CableView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root fx:id="root" type="Group" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="root" styleClass="cable-view" type="Group" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Line fx:id="line" endX="100.0" stroke="#6b6b6b" strokeWidth="10.0" />
       <CableDirectionView fx:id="directionStart" rotate="270.0" />
