--- a/tactiletriana/src/main/resources/fxml/DateTimeView.fxml
+++ b/tactiletriana/src/main/resources/fxml/DateTimeView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root styleClass="date-time-view" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" />
   </columnConstraints>
@@ -16,13 +16,7 @@
     <RowConstraints />
   </rowConstraints>
    <children>
-      <Label fx:id="timeLabel" alignment="CENTER" text="13:45" textAlignment="CENTER">
-         <font>
-            <Font size="72.0" />
-         </font></Label>
-      <Label fx:id="dateLabel" alignment="CENTER" text="31-12-2014" textAlignment="CENTER" GridPane.rowIndex="1">
-         <font>
-            <Font size="31.0" />
-         </font></Label>
+      <Label fx:id="timeLabel" styleClass="time-label" alignment="CENTER" text="13:45" textAlignment="CENTER"/>
+      <Label fx:id="dateLabel" styleClass="date-label" alignment="CENTER" text="31-12-2014" textAlignment="CENTER" GridPane.rowIndex="1"/>
    </children>
 </fx:root>
