--- a/tactiletriana/src/main/resources/fxml/NodeView.fxml
+++ b/tactiletriana/src/main/resources/fxml/NodeView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<fx:root type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root styleClass="node-view" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Rectangle fx:id="rectangle" fill="#6b6b6b" height="30.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="30.0" />
    </children>
