--- a/tactiletriana/src/main/resources/fxml/TouchView.fxml
+++ b/tactiletriana/src/main/resources/fxml/TouchView.fxml
@@ -10,7 +10,7 @@
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.node.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.device.*?>
 
-<fx:root type="TactilePane" fx:id="root" bordersCollide="true" proximityThreshold="0"
+<fx:root styleClass="touch-view" type="TactilePane" fx:id="root" bordersCollide="true" proximityThreshold="0"
          minWidth="1600" minHeight="900" 
          xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     
