--- a/tactiletriana/src/main/resources/fxml/TransformerView.fxml
+++ b/tactiletriana/src/main/resources/fxml/TransformerView.fxml
@@ -8,6 +8,6 @@
 <?import javafx.scene.shape.*?>
 
 
-<fx:root fill="#6b6b6b" height="80.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" type="Rectangle" width="80.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root styleClass="transformer-view" fill="#6b6b6b" height="80.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" type="Rectangle" width="80.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     
 </fx:root>
