--- a/tactiletriana/src/main/resources/fxml/NotificationView.fxml
+++ b/tactiletriana/src/main/resources/fxml/NotificationView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root maxHeight="100.0" maxWidth="400.0" minHeight="100.0" minWidth="400.0" prefHeight="100.0" prefWidth="400.0" styleClass="notification-view" stylesheets="@../stylesheets/notificationview.css" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root styleClass="notification-view" maxHeight="100.0" maxWidth="400.0" minHeight="100.0" minWidth="400.0" prefHeight="100.0" prefWidth="400.0" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="messageLabel" text="Something terrible happened, this is the default notification!" textAlignment="CENTER" wrapText="true">
          <font>
