--- a/tactiletriana/src/main/resources/fxml/ConfigurationView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ConfigurationView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root type="GridPane" styleClass="configuration-view" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="10.0" />
@@ -20,7 +20,7 @@
       <RowConstraints vgrow="NEVER" />
    </rowConstraints>
    <children>
-      <Label layoutX="14.0" layoutY="14.0" styleClass="title-label" stylesheets="@../stylesheets/launcherview.css" text="Configuration Panel" GridPane.columnSpan="2147483647" />
+      <Label layoutX="14.0" layoutY="14.0" styleClass="title" text="Configuration Panel" GridPane.columnSpan="2147483647" />
       <GridPane GridPane.rowIndex="1">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" />
