--- a/tactiletriana/src/main/resources/stylesheets/style.css
+++ b/tactiletriana/src/main/resources/stylesheets/style.css
@@ -1,12 +1,7 @@
 /*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 15-May-2015, 15:19:26
-    Author     : Richard
-*/
+This is the master stylesheet that will be applied to all major scenes in the
+application.
+ */
 
 // CONFIGURATION VIEW
 
