--- a/tactiletriana/src/main/resources/fxml/DeviceView.fxml
+++ b/tactiletriana/src/main/resources/fxml/DeviceView.fxml
@@ -9,13 +9,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root styleClass="device-view" minHeight="60.0" minWidth="60.0" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minHeight="60.0" minWidth="60.0" styleClass="device-view" type="StackPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="configIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="15.0" translateY="-15.0" StackPane.alignment="TOP_RIGHT">
-         <image>
-            <Image url="@../images/config.png" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="configIcon" id="config-icon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="15.0" translateY="-15.0" StackPane.alignment="TOP_RIGHT"/>
       <Label fx:id="batteryLabel" text="0%" textOverrun="CLIP" translateX="-15.0" translateY="-15.0" StackPane.alignment="TOP_RIGHT" />
+      <ImageView fx:id="deviceIcon" id="device-icon" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </fx:root>
