--- a/tactiletriana/src/main/resources/stylesheets/style.css
+++ b/tactiletriana/src/main/resources/stylesheets/style.css
@@ -54,6 +54,12 @@ application.
 
 // TOUCH
 
+.touch-view {
+    
+    -fx-background-image: url("../images/background.jpg");
+    -fx-background-repeat: stretch;
+}
+
 .device-view #config-icon {
     -fx-image: url("../images/config.png");
 }
