Electriciteit ziet er aanzienlijk cooler uit in GUI

--- a/tactiletriana/src/main/resources/stylesheets/style.css
+++ b/tactiletriana/src/main/resources/stylesheets/style.css
@@ -63,14 +63,19 @@ application.
     -fx-image: url("../images/config.png");
 }
 
+.cable-view {
+    -fx-effect: dropshadow(gaussian, black, 5, 0.2, 0, 0);
+}
+
+.electricity {
+    -fx-fill: #eeff00;
+    -fx-effect: dropshadow(gaussian, #eeff00, 10, 0.5, 0, 0);
+}
+
 .node-view.on-chart,
 .transformer-view.on-chart,
 .house-view.on-chart,
 .device-view.on-chart,
 .cable-view.on-chart {
     -fx-effect: dropshadow(gaussian, white, 10, 0.3, 0, 0);
-}
-
-.electricity {
-    -fx-fill: #eeff00;
 }
