--- a/tactiletriana/src/main/resources/fxml/CableView.fxml
+++ b/tactiletriana/src/main/resources/fxml/CableView.fxml
@@ -11,6 +11,6 @@
 
 <fx:root fx:id="root" styleClass="cable-view" type="Group" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Line fx:id="line" endX="100.0" stroke="#6b6b6b" strokeWidth="10.0" />
+      <Line fx:id="line" id="line" endX="100.0" stroke="#6b6b6b" strokeWidth="10.0" />
    </children>
 </fx:root>
