DeviceConfigView aanzienlijk nettere code

--- a/tactiletriana/src/main/resources/fxml/ControlView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ControlView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="5.0" type="HBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root styleClass="control-view" spacing="5.0" type="HBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="pauseButton" mnemonicParsing="false" text="Pause" />
       <Button fx:id="disableTrianaButton" mnemonicParsing="false" text="Disable Triana" />
