--- a/tactiletriana/src/main/resources/fxml/ChartView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ChartView.fxml
@@ -11,10 +11,10 @@
    <children>
       <LineChart fx:id="chart" animated="false" createSymbols="false" legendVisible="false" title="Chart Title">
         <xAxis>
-          <NumberAxis autoRanging="false" label="Time" minorTickCount="0" minorTickVisible="false" side="BOTTOM" tickMarkVisible="false" tickUnit="60.0" fx:id="xAxis" />
+          <NumberAxis id="x-axis" autoRanging="false" label="Time" minorTickCount="0" minorTickVisible="false" side="BOTTOM" tickMarkVisible="false" tickUnit="60.0" fx:id="xAxis" />
         </xAxis>
         <yAxis>
-          <NumberAxis fx:id="yAxis" forceZeroInRange="false" minorTickCount="0" minorTickVisible="false" side="LEFT" tickMarkVisible="false" />
+          <NumberAxis id="y-axis" fx:id="yAxis" forceZeroInRange="false" minorTickCount="0" minorTickVisible="false" side="LEFT" tickMarkVisible="false" />
         </yAxis>
         
       </LineChart>
